# VideoStreamer

./: .gitignore  CMakeLists.txt  Makefile  README.md  droneCommandHandler.c  droneCommandHandler.h  kvswebrtcmaster-static  main.c
inc/: config.h  droneCommandHandler.h
socklib/: CMakeLists.txt  networking.c  socklibCommon.h  tcpClientSocket.c  tcpClientSocket.h  udpClientSocket.c  udpClientSocket.h  udpServerSocket.c  udpServerSocket.h
src/: droneCommandHandler.c  main.c
utilities/: networking.c  tcpClientSocket.c  udpClientSocket.c  udpServerSocket.c  udpServerSocket.h  utilities.c
videostreamer/: CMakeLists.txt  common.h  config.h  droneCommandHandler.c  droneCommandHandler.h  droneHandshake.c  droneHandshake.h  droneVideoStreamHandler.c  droneVideoStreamHandler.h  main.c  rfc_6184.c  rfc_6184.h  streamReceiver.c  streamReceiver.h
videostreamer/utilities/: memoryManagement.c  memoryManagement.h  parrot.h  utilities.c  utilities.h
